// stazy-booking-schema.prisma

generator client {
  provider        = "prisma-client"
  output   = "../generated/prisma"
  previewFeatures = ["postgresqlExtensions"] // Cần thiết cho pgvector
}

datasource db {
  provider   = "postgresql"
  extensions = [vector]
}

// =========================================
// 1. MODEL: USER & PREFERENCES
// =========================================

model User {
  id       String  @id @default(uuid())
  email    String  @unique
  password String?
  
  // Profile Info
  name     String
  nickname String?
  phone    String?
  gender   String?
  dob      DateTime?
  address  String?
  
  // Media
  avatar   String?
  bgImage  String?
  
  // Job/Bio
  jobName  String?
  desc     String? @db.Text
  
  role     Role    @default(USER)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // --- RELATIONS ---
  hotels        Hotel[]         @relation("HotelAuthor")
  interactions  Interaction[]
  bookings      Booking[]
  reviews      Review[]
  authorRequests AuthorRequest[] // User có thể gửi nhiều request nếu bị reject
  // Quan hệ 1-1: Sở thích người dùng (Tách riêng để bảng User đỡ nặng)
  preference    UserPreference?
  recommendation Recommendation?

  // Log tìm kiếm (Optional)
  searchLogs    SearchQueryLog[]
  
  // Danh sách yêu thích
  favorites     Favorite[]

  @@map("users")
}

model AuthorRequest {
  id          String   @id @default(uuid())
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  // Thông tin đăng ký
  businessName    String   // Tên doanh nghiệp/cá nhân
  businessType    String   // "INDIVIDUAL" hoặc "COMPANY"
  taxCode         String?  // Mã số thuế (nếu là công ty)
  phone           String
  email           String
  address         String
  identityCard    String   // CMND/CCCD
  identityImages  String[] // Ảnh CMND/CCCD, giấy phép KD
  
  // Lý do & Mô tả
  reason          String?  @db.Text
  
  // Trạng thái
  status          AuthorRequestStatus @default(PENDING)
  
  // Admin xử lý
  reviewedBy      String?  // Admin ID
  reviewedAt      DateTime?
  rejectionReason String?  @db.Text
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([userId])
  @@index([status])
  @@map("author_requests")
}

enum AuthorRequestStatus {
  PENDING
  APPROVED
  REJECTED
}

model UserPreference {
  id              Int      @id @default(autoincrement())
  userId          String   @unique
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  interestedCategories String[]
  // Explicit Preferences (User tự chọn hoặc AI suy luận)
  favoriteAmenities String[] // ["pool", "gym", "sea_view"]
  favoriteCities    String[] // ["nha_trang", "da_nang"]
  
  // Behavioral Insights (AI tính toán từ History)
  avgPriceExpect    Decimal? @db.Decimal(12, 2) // Mức giá user hay xem/đặt
  preferredRatingMin Float?  // Vd: Chỉ thích rating > 4.0
  
  // Stats
  pastBookingCount  Int      @default(0)
  lastBookingAt     DateTime?

  updatedAt         DateTime @updatedAt

  @@map("user_preferences")
}

enum Role {
  USER
  AUTHOR
  ADMIN
}

enum HotelStatus {
  DRAFT       // Author đang soạn, chưa gửi
  PENDING     // Đang chờ Admin duyệt
  APPROVED    // Đã được duyệt, hiển thị công khai
  REJECTED    // Bị từ chối
  SUSPENDED   // Bị tạm ngưng (vi phạm chính sách)
}

// =========================================
// 2. MODEL: HOTEL & AI CONTEXT
// =========================================

model Hotel {
  id            Int      @id @default(autoincrement())
  
  // Relations
  authorId      String
  author        User     @relation("HotelAuthor", fields: [authorId], references: [id])
  
  categoryId    Int
  category      Category @relation(fields: [categoryId], references: [id])

  // Basic Info
  slug          String   @unique
  title         String
  roomName      String @default("Standard Room")
  featuredImage String
  galleryImgs   String[]
  description   String   @db.Text
  fullDescription String? @db.Text
  
  // Location & Map
  address       String
  destination     String   // "nha_trang", "da_nang" - Hỗ trợ gợi ý theo địa điểm
  map           Json     // { lat: ..., lng: ... }
  nearbyLandmarks String[] // ["cho_dem", "vinpearl"] -> Hỗ trợ gợi ý theo địa điểm

  // Pricing & Rooms
  price         Decimal  @db.Decimal(12, 2)
  saleOff       String?  // Text: "-30% Hè"
  saleOffPercent Int     @default(0) // Số: 30
  
  maxGuests     Int
  bedrooms      Int
  bathrooms     Int

  // Attributes & Context (Quan trọng cho Filtering)
  amenities     String[]
  tags          String[] // ["romantic", "pet-friendly", "business"]
  suitableFor   TripType[] // Enum array cho Postgres
  accessibility String[] // ["wheelchair", "elevator"]

  // Stats
  reviewStar    Float    @default(0)
  reviewCount   Int      @default(0)
  viewCount     Int      @default(0)
  commentCount  Int      @default(0)
  cancellationRate Float @default(0.0) // Tỷ lệ hủy (0.0 -> 1.0)
  
  // Flags
  like          Boolean  @default(false) // Cờ tạm (nên cân nhắc bỏ nếu dùng interaction)
  isAds         Boolean  @default(false)

  // --- APPROVAL WORKFLOW ---
  status        HotelStatus @default(DRAFT)
  
  // Thông tin phê duyệt
  submittedAt   DateTime?   // Khi author submit để admin duyệt
  approvedBy    String?     // Admin ID người duyệt
  approvedAt    DateTime?   // Thời điểm duyệt
  rejectionReason String?   @db.Text // Lý do từ chối (nếu bị reject)

  // --- AI / VECTOR FIELDS ---
  // Embedding cho hình ảnh (Visual search)
  imageVector   Unsupported("vector(512)")? 
  
  // Embedding cho chính sách (Semantic search: "tìm phòng cho hủy giờ chót")
  policies      String?  @db.Text
  policiesVector Unsupported("vector(512)")?

  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  // Relations
  interactions  Interaction[]
  bookings      Booking[]
  reviews      Review[]
  favorites     Favorite[]
  
  @@index([status])
  @@index([authorId, status])
  @@map("hotels")
}

enum TripType {
  BUSINESS
  FAMILY
  COUPLE
  SOLO
  GROUP
}

model Category {
  id          Int      @id @default(autoincrement())
  name        String
  slug        String   @unique
  description String?  @db.Text
  color       String?  
  icon        String?  
  thumbnail   String?
  count       Int      @default(0)
  
  hotels      Hotel[]

  @@map("categories")
}

// =========================================
// 3. MODEL: BOOKING & TRANSACTION (NEW)
// =========================================

model Booking {
  id                String        @id @default(uuid())
  bookingId         String?       @db.VarChar(255)  // Business ID từ MongoDB (optional for existing records)
  
  userId            String
  user              User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  hotelId           Int
  hotel             Hotel         @relation(fields: [hotelId], references: [id], onDelete: Cascade)

  // Guest Info (Snapshot tại thời điểm đặt - hỗ trợ auto-fill lần sau)
  guestName         String
  guestEmail        String
  guestPhone        String
  adults            Int           @default(1)
  children          Int           @default(0)
  
  // Booking Snapshot (Lưu trữ thông tin hotel & room at booking time)
  bookingSnapshot   Json?
  
  // Contact Details (JSON để giữ nguyên structure từ MongoDB)
  contactDetails    Json?

  // Schedule
  checkIn           DateTime
  checkOut          DateTime
  nights            Int           // Computed in logic

  // Payment Info
  basePrice         Decimal       @db.Decimal(12, 2)
  discount          Decimal       @db.Decimal(12, 2) @default(0)
  totalAmount       Decimal       @db.Decimal(12, 2)
  currency          String        @default("VND")

  // Payment Details (Lưu trữ Stripe/Payment Provider)
  paymentMethod     PaymentMethod @default(STRIPE)
  paymentStatus     PaymentStatus @default(PENDING)
  paymentIntentId   String?       @db.VarChar(255)    // Stripe Payment Intent ID
  stripeSessionId   String?       @db.VarChar(255)    // Stripe Checkout Session ID
  paymentFailureReason String?    @db.Text            // Lý do thanh toán thất bại (for compensating)

  // Status
  status            BookingStatus @default(PENDING)
  
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt

  @@index([userId])
  @@index([hotelId])
  @@index([status])
  @@map("bookings")
}

enum OutboxStatus {
  PENDING
  PROCESSING
  SENT
  FAILED
}

model OutboxMessage {
  id            String       @id @default(uuid())
  dedupKey      String       @unique
  aggregateType String
  aggregateId   String
  eventType     String
  topic         String
  payload       Json
  status        OutboxStatus @default(PENDING)
  attempts      Int          @default(0)
  availableAt   DateTime     @default(now())
  processedAt   DateTime?
  lastError     String?      @db.Text
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  @@index([status, availableAt])
  @@index([aggregateType, aggregateId])
  @@map("outbox_messages")
}

model ProcessedEvent {
  eventId   String   @id
  topic     String
  createdAt DateTime @default(now())

  @@index([createdAt])
  @@map("processed_events")
}

enum BookingStatus {
  PENDING    // Đang giữ chỗ/chờ thanh toán
  CONFIRMED  // Đã thanh toán/Xác nhận
  CANCELLED  // Đã hủy
  COMPLETED  // Đã checkout xong
}

enum PaymentMethod {
  STRIPE
  PAYPAL
  VNPAY
  BANK_TRANSFER
  CASH_ON_CHECKIN
}

enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED
  REFUNDED
}

// =========================================
// 4. MODEL: AI INTERACTION & ANALYTICS
// =========================================

model Interaction {
  id        Int             @id @default(autoincrement())
  userId    String
  user      User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  sessionId String?  @db.VarChar(255) // Để theo dấu chân người dùng trong 1 phiên
  hotelId   Int?            
  hotel     Hotel?          @relation(fields: [hotelId], references: [id], onDelete: Cascade)
  
  type      InteractionType @default(VIEW)
  
  // --- THÊM TRƯỜNG NÀY ---
  // Nếu type == RATING, lưu số sao vào đây để dùng hàm _avg() của Prisma dễ dàng
  rating    Int?            
  
  metadata  Json?           
  timestamp DateTime        @default(now())

  @@index([userId, type])
  @@index([hotelId])
  @@map("interactions")
}

enum InteractionType {
  VIEW            // Xem chi detail (Implicit signal, weight 0.5)
  LIKE            // Thả tim
  SHARE           // Chia sẻ
  ADD_TO_WISHLIST // Thêm vào wishlist (Implicit signal, weight 3.0)
  BOOK            // Đặt phòng thành công (Implicit signal, weight 5.0)
  CLICK_BOOK_NOW  // Bấm nút đặt nhưng chưa thanh toán (Implicit signal, weight 2.0)
  CANCEL          // Hủy (Negative signal)
  SEARCH_QUERY    // Tìm kiếm (Lưu vào metadata)
  FILTER_APPLIED  // Lọc
  RATING          // Đánh giá chung
  RATE_POSITIVE   // Đánh giá tích cực 4-5 sao (Implicit signal, weight 4.5)
  RATE_NEGATIVE   // Đánh giá tiêu cực 1-2 sao (Implicit signal, weight -3.0)
}

// Bảng riêng để lưu Recommendation Cache
model Recommendation {
  id        Int      @id @default(autoincrement())
  userId    String   @unique
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  hotelIds  Int[]    // List ID gợi ý
  score     Json?    // { "hotel_1": 0.98, "hotel_2": 0.85 } - Giải thích độ phù hợp
  
  updatedAt DateTime @updatedAt

  @@map("recommendations")
}

// Bảng log Search Query chuyên biệt (Optional - để train AI)
model SearchQueryLog {
  id        Int      @id @default(autoincrement())
  userId    String?
  user      User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  query     String
  filters   Json?
  timestamp DateTime @default(now())

  @@map("search_query_logs")
}
// chart
model SystemMetric {
  id           String   @id @default(uuid())
  
  // Các chỉ số đánh giá mô hình AI
  rmse         Float    // Độ lỗi (Root Mean Square Error)
  mae          Float    @default(0) // Lỗi tuyệt đối trung bình (Mean Absolute Error)
  precisionAt5 Float    // Độ chính xác trong Top 5
  recallAt5    Float    // Độ bao phủ trong Top 5
  ndcgAt5      Float    @default(0) // Normalized Discounted Cumulative Gain @5
  baselineRmse Float?   @default(0) // Baseline RMSE (User Mean)
  baselineMae  Float?   @default(0) // Baseline MAE (User Mean)
  baselinePrecision Float? @default(0) // Baseline Precision (Top Popular)
  baselineRecall    Float? @default(0) // Baseline Recall (Top Popular)
  baselineNdcg      Float? @default(0) // Baseline NDCG (Top Popular)
  
  // Metadata thêm (nếu cần)
  algorithm    String   @default("SVD") // Tên thuật toán: SVD, KNN, NeuralCF...
  datasetSize  Int?     // Số lượng dòng dữ liệu khi train
  executionTimeMs Int?  // (Optional) Thời gian chạy model (ms) để so sánh hiệu năng

  trainingHistory Json? // Lưu dạng: [ { "k": 10, "rmse": 0.85 }, { "k": 20, "rmse": 0.82 }, ... ]
  tuningParams Json? // Ví dụ: [{"param": 10, "metric": 0.8}, {"param": 20, "metric": 0.75}]
  createdAt    DateTime @default(now())

  @@map("system_metrics")
}

// =========================================
// 5. MODEL: FAVORITES (WISHLIST)
// =========================================

model Favorite {
  id        Int      @id @default(autoincrement())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  hotelId   Int
  hotel     Hotel    @relation(fields: [hotelId], references: [id], onDelete: Cascade)
  
  createdAt DateTime @default(now())

  @@unique([userId, hotelId]) // Đảm bảo mỗi user chỉ thích 1 hotel 1 lần
  @@index([userId])
  @@index([hotelId])
  @@map("favorites")
}
enum ReviewSentiment {
  POSITIVE
  NEGATIVE
  NEUTRAL
}

model Review {
  id                 String           @id @default(uuid())
  bookingId          String           @unique @db.VarChar(255) // Ràng buộc gốc từ MongoDB

  userId             String
  user               User             @relation(fields: [userId], references: [id], onDelete: Cascade)

  hotelId            Int
  hotel              Hotel            @relation(fields: [hotelId], references: [id], onDelete: Cascade)

  rating             Int              // Core cho Collaborative Filtering
  comment            String?          @db.Text // Nguồn raw text cho Word Cloud Python xử lý

  sentiment          ReviewSentiment? // Đánh giá cảm xúc chung
  explicitSentiments Json?            // Trọng số cho Hybrid Model (Aspect-based sentiment)

  nlpProcessed       Boolean          @default(false) // Flag đánh dấu đã gọi AI phân tích chưa

  createdAt          DateTime         @default(now())
  updatedAt          DateTime         @updatedAt

  @@index([hotelId])
  @@index([userId])
  @@map("reviews")
}
// =========================================
// 6. MODEL: CHAT MESSAGES (Admin Support)
// =========================================

enum SenderRole {
  USER
  ADMIN
  AI
}

model ChatMessage {
  id        String     @id @default(uuid())
  userId    String
  sender    SenderRole
  text      String?
  images    String[]
  isRead    Boolean    @default(false)
  metadata  Json?      // { hotels, bookingLink, userName }

  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  @@index([userId])
  @@index([isRead])
  @@index([createdAt])
  @@map("chat_messages")
}

// =========================================
// 7. MODEL: DAILY STATS
// =========================================

model DailyStat {
  id        Int      @id @default(autoincrement())
  date      DateTime @unique @db.Date 
  
  // 1. Chỉ số Kinh doanh cốt lõi (Business Core)
  totalRevenue     Decimal @default(0) @db.Decimal(12, 2)
  totalBookings    Int     @default(0) // Số booking thành công
  totalCancels     Int     @default(0) // Số booking bị hủy (QUAN TRỌNG)

  // 2. Chỉ số Phễu chuyển đổi (Conversion Funnel)
  totalViews       Int     @default(0) // Step 1
  totalClickBook   Int     @default(0) // Step 2 (High Intent - CLICK_BOOK_NOW)
  
  // 3. Chỉ số Tương tác (Engagement)
  totalLikes       Int     @default(0) 
  totalSearch      Int     @default(0)
  
  // 4. (Optional) Nếu bạn muốn lưu các loại phụ (Share, Comment...) 
  // mà không muốn tạo thêm cột, hãy dùng JSON
  miscInteractions Json?   // Vd: { "share": 5, "comment": 12 }

  createdAt DateTime @default(now())

  @@map("daily_stats")
}